@@ -585,7 +585,7 @@
  constructor_declaration_se
  (lambda_match
   ((Sexpr loc (list (Satom _ Auid ci) :: sel))
-   (, ci (List.map ctyp_se sel)))
+   (, loc ci (List.map ctyp_se sel)))
   (se
    (error se "constructor_declaration"))))
 
