@@ -184,8 +184,8 @@ let mktype loc tl cl tk tm =
 ;;
 let mkmutable m = if m then Mutable else Immutable;;
 let mkprivate m = if m then Private else Public;;
-let mktrecord (n, m, t) = n, mkmutable m, ctyp t;;
-let mkvariant (c, tl) = c, List.map ctyp tl;;
+let mktrecord (_, n, m, t) = n, mkmutable m, ctyp t;;
+let mkvariant (_, c, tl) = c, List.map ctyp tl;;
 let type_decl tl cl =
   function
     TyMan (loc, t, TyRec (_, ltl)) ->
